--- a/index.html
+++ b/index.html
@@ -1,14 +1,51 @@
 <!doctype html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title></title>
+    <link href="style.css" rel="stylesheet" />
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title></title>
-  <link href="style.css" rel="stylesheet" />
-</head>
-
-<body></body>
-<script src="index.js"></script>
-
+  <body>
+    <div class="container">
+      <div class="display"></div>
+      <div class="input">
+        <div class="top">
+          <div class="clear">C</div>
+          <div class="result">=</div>
+        </div>
+        <div class="bottom">
+          <div class="number">
+            <ul>
+              <li>1</li>
+              <li>2</li>
+              <li>3</li>
+            </ul>
+            <ul>
+              <li>4</li>
+              <li>5</li>
+              <li>6</li>
+            </ul>
+            <ul>
+              <li>7</li>
+              <li>8</li>
+              <li>9</li>
+            </ul>
+            <ul>
+              <li>0</li>
+              <li>.</li>
+            </ul>
+          </div>
+          <ul class="operators">
+            <li>+</li>
+            <li>-</li>
+            <li>*</li>
+            <li>/</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </body>
+  <script src="index.js"></script>
 </html>
